# llm-clean

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FINETUNE_INSTRUCTIONS.md  GEMINI.md  Makefile  README.md  analyzed_entities.tsv  analyzed_entities_claude.tsv  analyzed_entities_claude4-5.tsv  analyzed_entities_claude4-5_agents_using_files_with_intro.tsv  analyzed_entities_gemini3.tsv  docker-compose.yml  emro_reproduce_batch_analysis.sh  main.tex  pyproject.toml  reproduce.sh  reproduce_batch_analysis.sh  requirements.txt  todo.org
data/: benchmark_10_domains.json  large_taxonomy_dataset.json
datasets/: README.md  bronchitis_cycling_large.json  ontological_stress_test.json  ontological_stress_test_specific.json
docs/: DSPY_GUIDE.md
experiment/: BENCHMARK_REPORT.md  comparison_gemini_llama.md  generate_taxonomy.py  taxonomy_agentic_llama-3.2-3b-instruct.json  taxonomy_agentic_qwen-2.5-7b-instruct.json  taxonomy_benchmark_deepseek_v3.json  taxonomy_benchmark_mistral_large.json  taxonomy_results_specific.json
notebooks/: explore_classify_dspy_results.ipynb  explore_classify_finetuned_results.ipynb  explore_classify_results.ipynb  figures.ipynb
ontology/: bfo-core.owl  catalog-v001.xml  guarino_messy_extra_small_test.owl
ontology_tools/: AGENT_ANALYZER_README.md  DEFAULTS_UPDATED.md  agent_analyzer.py  analyzer.py  classifier.py  test_agent_analyzer.py
output/: collect_agent_critic_results.md  collect_agent_critic_results.tsv  collect_agent_results.md  collect_agent_results.tsv  collect_non_agent_results.md  collect_non_agent_results.tsv  emro_ontoclean_predictions_bfo.tsv  emro_ontoclean_predictions_bfo2.tsv  emro_ontoclean_predictions_bfo3.tsv  emro_ontoclean_violations_bfo.tsv  emro_ontoclean_violations_bfo2.tsv  emro_ontoclean_violations_bfo3.tsv  emro_summary.md  ncit_top300_entities.tsv  ncit_top300_ontoclean_predictions_bfo2.tsv  ncit_top300_ontoclean_predictions_bfo3.tsv
scripts/: agentic_taxonomy.py  agentic_taxonomy_multi_critic.py  analyze_entity.py  analyze_entity_agents.py  batch_analyze_agent_critic_dspy.py  batch_analyze_agent_dspy.py  batch_analyze_dspy.py  batch_analyze_owl.py  batch_analyze_owl_agents.py  (+31 more)
(+496 files in other folders)
