[project]
name = "llm-clean"
version = "0.1.0"
description = "Ontologically Sound Taxonomy Generation with Agentic Critique"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib",
    "requests",
    "python-dotenv",
    "pypdf2",
    "tqdm",
    "pandas",
    "tabulate",
    "numpy",
    "langchain-openai",
    "langchain-core",
    "git-root",
    "pymupdf>=1.27.1",
    "dspy-ai>=2.5.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
