[project]
name = "llm-clean"
version = "0.1.0"
description = "Ontologically Sound Taxonomy Generation with Agentic Critique"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib",
    "requests",
    "python-dotenv",
    "pypdf2",
    "tqdm",
    "pandas",
    "tabulate",
    "numpy",
    "langchain-openai",
    "langchain-core",
    "git-root",
    "pymupdf>=1.27.1",
    "dspy-ai>=2.5.0",
    "scikit-learn>=1.3.0",
    # Fine-tuning on Apple Silicon (macOS only)
    "mlx-lm>=0.21.0; sys_platform == 'darwin'",
    "transformers>=4.40.0; sys_platform == 'darwin'",
    "sentencepiece; sys_platform == 'darwin'",
    "safetensors; sys_platform == 'darwin'",
    "gguf; sys_platform == 'darwin'",
    "llama-cpp-python; sys_platform == 'darwin'",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
